--- a/frame24.html
+++ b/frame24.html
@@ -4,6 +4,6 @@
         <title>second_frame</title>
     </head>
     <body>
-        <a href="Cart.html" target="frame32" class="Cart">Cart</a>
+        <a href="cart.html" target="frame32" class="Cart">Cart</a>
     </body>
 </html>
