--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
 <body>
     <center>
         <h2>Your Shopping Cart</h2>
-        <img src="your_image_path/cart.jpg" width="220" height="200">
+        <img src="cart.jpg" width="220" height="200">
 
         <ul>
             <li>
