--- a/cart.html
+++ b/cart.html
@@ -10,7 +10,7 @@
 <body>
     <center>
         <h2>Your Shopping Cart</h2>
-        <img src="https://tse3.mm.bing.net/th?id=OIP.4DzG2ImL-QjKx1-7ZBSBywHaIl&pid=Api&P=0&h=180" width="220" height="200">
+        <img src="cart.jpg" width="220" height="200">
 
         <ul>
             <li>
