--- a/frame31.html
+++ b/frame31.html
@@ -5,7 +5,7 @@
         <title>third_frame</title>
     </head>
     <body>
-        <h2>Users can:</h2>
+        <h2>Services Available:</h2>
         <ul>
             <li><a href="wish.html" target="frame32">Wish list</a><br><br></li> 
             <li><a href="account.html" target="frame32">Manage Account</a><br><br> </li>
